--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Quick Notes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div class="base-grid">
+      <h1>Overview</h1>
+      <div class="container overview-grid">
+        <div class="button-container">
+          <i class="fas fa-folder"></i>
+          <h4>Folder Name</h4>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
