Implement basic file browser functionality
Added the file browser feature to the application, allowing users to add folders and files. The application now saves directories and displays the saved ones. No navigation functionality implemented yet.

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,17 @@
   </head>
   <body>
     <div class="base-grid">
-      <h1>Overview</h1>
-      <div class="container overview-grid">
-        <div class="button-container">
-          <i class="fas fa-folder"></i>
-          <h4>Folder Name</h4>
-        </div>
+      <div class="home-header-grid">
+        <h1>Overview</h1>
+        <button id="addFolderButton" class="slim-button fas fa-folder" style="padding-top: 10px"></button>
+        <button id="addFileButton" class="slim-button fas fa-file" style="padding-top: 10px"></button>
+      </div>
+      <div id="contentContainer" class="container overview-grid">
       </div>
     </div>
   </body>
+  <script src="storedContent.js"></script>
 </html>
+
+
+
