--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,51 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div id="addFileOverlay" class="overlay" style="display: none;">
+      <div class="centered-container" style="text-align: center;">
+          <div style="display: grid; grid-template-columns: 1fr auto;">
+              <h2>Add a Text File</h2>
+              <button id="addFileCloseButton" class="slim-button fa-solid fa-x"></button>
+          </div>
+          <input id="addFileInput" type="text" placeholder="Filename with extension" style="padding: 10px;">
+          <button id="confirmAddNewFileButton" class="input-button">Add File</button>
+      </div>
+    </div>
+
+    <div id="addFolderOverlay" class="overlay" style="display: none;">
+      <div class="centered-container" style="text-align: center;">
+          <div style="display: grid; grid-template-columns: 1fr auto;">
+              <h2>Add a Folder</h2>
+              <button id="addFolderCloseButton" class="slim-button fa-solid fa-x"></button>
+          </div>
+          <input id="addFolderInput" type="text" placeholder="Folder name" style="padding: 10px;">
+          <button id="confirmAddNewFolderButton" class="input-button">Add Folder</button>
+      </div>
+    </div>
+
+
     <div class="base-grid">
       <div class="home-header-grid">
-        <h1>Overview</h1>
-        <button id="addFolderButton" class="slim-button fas fa-folder" style="padding-top: 10px"></button>
-        <button id="addFileButton" class="slim-button fas fa-file" style="padding-top: 10px"></button>
+        <h1 id="locationHeader" style="text-align: left;">Overview</h1>
+        <div id="searchForContentDiv" style="display: flex; justify-content: center; align-items: center;">
+          <i class="fas fa-magnifying-glass" style="color: white; margin-right: 10px;"></i>
+          <div class="findFileFolderContainer" style="padding: 5px;">
+            <button id="addFolderButton" class="slim-button fas fa-folder"></button>
+            <button id="addFileButton" class="slim-button fas fa-file"></button>    
+          </div>
+        </div>
       </div>
       <div id="contentContainer" class="container overview-grid">
+        
+      </div>
+      <div style="display: grid; grid-template-columns: repeat(2, 1fr);">
+        <button id="addNewFileButton" class="user-button">Create New Text File</button>
+        <button id="addNewFolderButton" class="user-button">Create New Folder</button>
       </div>
     </div>
   </body>
   <script src="storedContent.js"></script>
+  <script src="fileManager.js"></script>
 </html>
 
 
