--- a/src/notepad.html
+++ b/src/notepad.html
@@ -10,15 +10,16 @@
 <body>
   <div class="notepad-grid">
     <div class="header-grid">
-        <button class="slim-button fas fa-arrow-left back-button"></button>
-        <h1>File Name Here</h1>
+        <button id="backButton" class="slim-button fas fa-arrow-left back-button"></button>
+        <h1 id="fileNameHeader">File Name Here</h1>
     </div>
     <div class="container">
       <div style="display: flex; height: 100%;">
-        <textarea name="" id="" cols="30" rows="10"></textarea>            
+        <textarea name="textFileTextArea" id="textFileTextArea" cols="30" rows="10"></textarea>            
       </div>
     </div>
-    <button class="user-button">Save</button>
+    <button id="saveTextFile" class="user-button">Save</button>
   </div>
 </body>
+<script src="notepad.js"></script>
 </html>
