Front End Improvements
- Save button will display when the user begins to edit a text file and hide when user clicks it
- Folders now display responsively! And folders no longer "glide" when the user adjust window size
- Added min width and height to window
- Header now displays which folder is currently being displayed. "Overview" is the home view.
- Main header's overflow is now hidden

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
     <div class="base-grid">
       <div class="home-header-grid">
-        <h1 id="locationHeader" style="text-align: left;">Overview</h1>
+        <h1 class="main-header" id="locationHeader" style="text-align: left;">Overview</h1>
         <div id="searchForContentDiv" style="display: flex; justify-content: center; align-items: center;">
           <i class="fas fa-magnifying-glass" style="color: white; margin-right: 10px;"></i>
           <div class="findFileFolderContainer" style="padding: 5px;">
