--- a/src/notepad.html
+++ b/src/notepad.html
@@ -11,14 +11,14 @@
   <div class="notepad-grid">
     <div class="header-grid">
         <button id="backButton" class="slim-button fas fa-arrow-left back-button"></button>
-        <h1 id="fileNameHeader">File Name Here</h1>
+        <h1 class="main-header" id="fileNameHeader">File Name Here</h1>
     </div>
     <div class="container">
       <div style="display: flex; height: 100%;">
         <textarea name="textFileTextArea" id="textFileTextArea" cols="30" rows="10"></textarea>            
       </div>
     </div>
-    <button id="saveTextFile" class="user-button">Save</button>
+    <button id="saveTextFile" class="user-button" style="visibility: hidden;">Save</button>
   </div>
 </body>
 <script src="notepad.js"></script>
