Drag and Drop Folders/Files
- While in the "Home" directory you can now drag and drop folders and files from explorer.

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
   </body>
   <script src="storedContent.js"></script>
   <script src="fileManager.js"></script>
+  <script src="dropFiles.js"></script>
 </html>
 
 
