--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div class="context-menu" id="customContextMenu">
+      <div class="context-menu-item">Placeholder</div>
+    </div>
+
+
     <div id="addFileOverlay" class="overlay" style="display: none;">
       <div class="centered-container" style="text-align: center;">
           <div style="display: grid; grid-template-columns: 1fr auto;">
@@ -53,6 +58,7 @@
   <script src="storedContent.js"></script>
   <script src="fileManager.js"></script>
   <script src="dropFiles.js"></script>
+  <script src="rightClick.js"></script>
 </html>
 
 
