Error Handling and Quality of Life
- Front end error display (red faded border)
- Added error handling if folder doesn't exist when user opens it (user probably deleted a file outside of application)
- Filename and header overflow with ellipsis
-  Added refresh button (unable to click on a folder or did you add something outside of the application, refresh to update!)
-

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
     <div class="base-grid">
       <div class="home-header-grid">
         <h1 class="main-header" id="locationHeader" style="text-align: left;">Overview</h1>
+        <button id="refreshButton" class="slim-button fas fa-refresh" style="margin-right: 10px; font-size: 16px;"></button>
         <div id="searchForContentDiv" style="display: flex; justify-content: center; align-items: center;">
           <i class="fas fa-magnifying-glass" style="color: white; margin-right: 10px;"></i>
           <div class="findFileFolderContainer" style="padding: 5px;">
@@ -48,7 +49,6 @@
         </div>
       </div>
       <div id="contentContainer" class="container overview-grid">
-        
       </div>
       <div style="display: grid; grid-template-columns: repeat(2, 1fr);">
         <button id="addNewFileButton" class="user-button">Create New Text File</button>
