Open File Explorer Right Click
- Right-click on a file or folder to open the directory containing the selected file or folder in the file explorer. Thats a lot of file.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="context-menu" id="customContextMenu">
-      <div class="context-menu-item">Placeholder</div>
+      <div id="rcFileExplorer" class="context-menu-item">Open in File Explorer</div>
     </div>
 
 
