Right Click Select
- Based on what is being clicked will change what options are available.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <div class="context-menu" id="customContextMenu">
-      <div id="rcFileExplorer" class="context-menu-item">Open in File Explorer</div>
+      <div id="contextMenuBackground" style="display: none;">
+        <div id="contextBGAddFile" class="context-menu-item">Create New File</div>
+        <div id="contextBGAddFolder" class="context-menu-item">Create New Folder</div>
+      </div>
+      <div id="contextMenuFileFolder" style="display: none;">
+        <div id="rcFileExplorer" class="context-menu-item">Open in File Explorer</div>
+      </div>
     </div>
 
 
