Right Click Functionality
- Right clicking on background will allow you to create file or folders.
- Fixed reveal file/folder directory to open the parent folder.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div id="contextBGAddFolder" class="context-menu-item">Create New Folder</div>
       </div>
       <div id="contextMenuFileFolder" style="display: none;">
-        <div id="rcFileExplorer" class="context-menu-item">Open in File Explorer</div>
+        <div id="rcFileExplorer" class="context-menu-item">Reveal in File Explorer</div>
       </div>
     </div>
 
