--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,18 @@
       </div>
     </div>
 
+    <div id="deleteOverlay" class="overlay" style="display: none;">
+      <div class="centered-container" style="text-align: center;">
+          <div style="display: grid; grid-template-columns: 1fr auto;">
+              <h2>Delete</h2>
+              <button id="deleteCloseButton" class="slim-button fa-solid fa-x"></button>
+          </div>
+          <input id="deleteInput" type="text" placeholder="Type 'DELETE' to delete" style="padding: 10px;">
+          <button id="confirmDeleteButton" class="input-button">Confirm Delete</button>
+      </div>
+    </div>
+
+
 
     <div class="base-grid">
       <div class="home-header-grid">
