Fixed Right Click Menu
- Right Click Menu opens toward the center of the window to avoid overflowing beyond limits
- Added 'Remove' right click placeholder

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <div id="contextMenuFileFolder" style="display: none;">
         <div id="rcFileExplorer" class="context-menu-item">Reveal in File Explorer</div>
         <div id="rcEdit" class="context-menu-item">Edit</div>
+        <div id="rcRemove" class="context-menu-item" style="display: none;">Remove</div>
         <div id="rcDelete" class="context-menu-item">Delete</div>
       </div>
     </div>
