Remove Linked File/Folder
- Added the ability to remove a linked directory (this doesn't delete it)
- Can only be done to linked files and folders in the "Overview" where those files can be added

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,19 @@
       </div>
     </div>
 
+    <div id="removeOverlay" class="overlay" style="display: none;">
+      <div class="centered-container" style="text-align: center;">
+          <div style="display: grid; grid-template-columns: 1fr; margin-bottom: 10px;">
+              <h2>Are you sure you want to remove?</h2>
+              <h5 style="padding: 0px; margin: 0px;">This will not delete the file or folder.</h5>
+          </div>
+          <div style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 10px;">
+            <button id="confirmRemoveButton" class="input-button">Remove</button>
+            <button id="cancelRemoveButton" class="input-button">Cancel</button>
+          </div>
+      </div>
+    </div>
+
 
 
     <div class="base-grid">
