--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <!--https://coolors.co/palette/0d1b2a-1b263b-415a77-778da9-e0e1dd-->
     <meta charset="UTF-8" />
-    <title>Quick Notes</title>
+    <title>Explorer Notes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="index.css" />
   </head>
